service-mesh-demo/001-pure-ingress/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: demo0
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo1
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo1
  namespace: demo0
spec:
  selector:
    app: demo1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1
  namespace: demo0
  labels:
    app: demo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1
  
  template:
    metadata:
      labels:
        app: demo1
    
    spec:
      containers:
        - name: demo1
          image: siudeks/demo:demo1
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: demo2
  namespace: demo0
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
  namespace: demo0
  labels:
    app: demo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo2
  
  template:
    metadata:
      labels:
        app: demo2
    
    spec:
      containers:
        - name: demo1
          image: siudeks/demo:demo2
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
